--- a/hello-ecs.yaml
+++ b/hello-ecs.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hello-keswick
+  name: hello-ecs
   labels:
     app: metallb
 ---
@@ -9,16 +9,16 @@ apiVersion:  apps/v1
 kind: Deployment
 metadata:
   name: nginx-helloworld-deployment
-  namespace: hello-keswick
+  namespace: hello-ecs
 spec:
   selector:
     matchLabels:
-      app: nginx-hello-keswick
+      app: nginx-hello-ecs
   replicas: 1 # tells deployment to run 1 pod matching the template
   template:
     metadata:
       labels:
-        app: nginx-hello-keswick
+        app: nginx-hello-ecs
     spec:
       containers:
       - name: nginx-helloworld
@@ -29,13 +29,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: ngnix-service
-  namespace: hello-keswick
+  name: nginx-nodeport
+  namespace: hello-ecs
 spec:
-  selector:
-    app: nginx-hello-keswick
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+  - port: 80      # Port exposed within the cluster
+    targetPort: 80  # Port on the pods
+    nodePort: 30099   # Port accessible externally on each node
+  selector:
+    app: nginx-hello-ecs
