Updated Example naming

--- a/virtualmachine/linux-photon.yaml
+++ b/virtualmachine/linux-photon.yaml
@@ -34,5 +34,5 @@ data:
         shell: /bin/bash
     write_files:
       - content: |
-          Keswick VM service says Hello World
+          VECO VM service says Hello World
         path: /helloworld
